--- a/app/assets/stylesheets/hoodcast.css.scss
+++ b/app/assets/stylesheets/hoodcast.css.scss
@@ -260,6 +260,7 @@ div#rc-project-view {
 
 @media only screen and (max-width: 730px) {
   div#rc-project-view {
+    overflow-x: hidden;
     background-color: white;
 
     div#project-header {
